--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -1,23 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <group
-        android:id="@+id/group1"
-        android:checkableBehavior="single">
-
         <item
-            android:id="@+id/item1"
-            android:checked="true"
-            android:icon="@drawable/ic_settings"
-            android:title="settings" />
-
-
-        <item
-            android:id="@+id/item2"
+            android:id="@+id/logOut"
             android:icon="@drawable/ic_navigaton_exit"
             android:title="Log Out" />
 
-    </group>
 
 </menu>
 
