--- a/app/src/main/res/layout/recipe_cards.xml
+++ b/app/src/main/res/layout/recipe_cards.xml
@@ -17,13 +17,14 @@
         app:cardCornerRadius="18dp"
         >
 
-        <androidx.appcompat.widget.LinearLayoutCompat
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="#75B3FF"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/Img_recipe"
                 android:layout_width="100dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
@@ -31,26 +32,33 @@
                 android:src="@drawable/img_chef"/>
 
 
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="5dp">
 
                 <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/recipe_LBL_title"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/font_buttons"
+                    android:layout_toEndOf="@+id/Img_recipe"
                     android:text="Recipe Name"
+                    android:layout_margin="8dp"
                     android:textColor="#000000"
                     android:textSize="25sp" />
 
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/item_IMG_favorite"
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_margin="8dp"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_heart_empty" />
 
 
-            </LinearLayout>
 
-        </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+        </RelativeLayout>
 
     </com.google.android.material.card.MaterialCardView>
 
