--- a/app/src/main/res/layout/recipe_cards.xml
+++ b/app/src/main/res/layout/recipe_cards.xml
@@ -32,17 +32,19 @@
                 android:src="@drawable/img_chef"/>
 
 
-
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/recipe_LBL_title"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/font_buttons"
-                    android:layout_toEndOf="@+id/Img_recipe"
-                    android:text="Recipe Name"
-                    android:layout_margin="8dp"
-                    android:textColor="#000000"
-                    android:textSize="25sp" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/recipe_LBL_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_toEndOf="@+id/Img_recipe"
+                android:fontFamily="@font/font_buttons"
+                android:text="Recipe Name"
+                android:textColor="#000000"
+                android:textSize="25sp" />
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/item_IMG_favorite"
