--- a/app/src/main/res/layout/fragment_context_recipe.xml
+++ b/app/src/main/res/layout/fragment_context_recipe.xml
@@ -3,10 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.IngredientFragment">
+    tools:context=".Fragments.ContentRecipeFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/ingredients_RECYC"
+        android:id="@+id/Context_Recipe_RECYC"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp"
