--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -17,17 +17,17 @@
         android:layout_centerInParent="true"
         android:orientation="vertical">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/navigation_header_container_FAB_profile_pic"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="right|bottom"
-            android:backgroundTint="@color/black"
-            app:elevation="8dp"
-            app:fabCustomSize="30dp"
-            app:srcCompat="@drawable/ic_edit"
-            app:tint="@color/white"
-            app:useCompatPadding="false" />
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/navigation_header_container_FAB_profile_pic"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="right|bottom"-->
+<!--            android:backgroundTint="@color/black"-->
+<!--            app:elevation="8dp"-->
+<!--            app:fabCustomSize="30dp"-->
+<!--            app:srcCompat="@drawable/ic_edit"-->
+<!--            app:tint="@color/white"-->
+<!--            app:useCompatPadding="false" />-->
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/header_IMG_user"
@@ -41,14 +41,14 @@
             app:civ_border_width="3dp" />
 
 
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/header_BAR_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:indeterminate="true"
-            android:visibility="invisible"
-            app:indicatorColor="#CDA99A" />
+<!--        <com.google.android.material.progressindicator.CircularProgressIndicator-->
+<!--            android:id="@+id/header_BAR_progress"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:indeterminate="true"-->
+<!--            android:visibility="invisible"-->
+<!--            app:indicatorColor="#CDA99A" />-->
 
     </FrameLayout>
 
